--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Head is intentionally left empty for now -->
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main>
+      <article>
+        <h1>Article Title</h1>
+        <section>
+          <!-- Content goes here -->
+          <p>This is the content of the article.</p>
+        </section>
+      </article>
+    </main>
+
+    <footer>
+      <p>&copy; Copyright</p>
+    </footer>
+  </body>
+</html>
